fix chat spacing

--- a/static/style.css
+++ b/static/style.css
@@ -37,12 +37,10 @@
 
 .userText {
   margin-left: auto;
-  margin-right: 10px;
   background-color: #43cc47;
 }
 
 .botText {
-  margin-left: 10px;
   margin-right: auto;
   background-color: #1982fc;
 }
